<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ai_back"
        tools:context=".ui.MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_loading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:layout_width="300dp"
                android:layout_height="150dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rl_my_answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/cons_bottom"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_question" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_first"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_prompt"
                android:layout_width="72dp"
                android:layout_height="80dp"
                android:layout_marginTop="206dp"
                android:src="@mipmap/iv_prompt"
                android:textColor="@color/text_color1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/ask_skill"
                android:textColor="@color/text_color1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_prompt" />

            <TextView

                android:id="@+id/tv_prompt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:background="@drawable/text_back_shape"
                android:paddingStart="35dp"
                android:paddingTop="6dp"
                android:paddingEnd="35dp"
                android:paddingBottom="6dp"
                android:text="@string/ask_skill1"
                android:textColor="@color/text_color1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_prompt" />

            <TextView
                android:id="@+id/tv_prompt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:background="@drawable/text_back_shape"
                android:gravity="center"
                android:paddingStart="35dp"
                android:paddingTop="6dp"
                android:paddingEnd="35dp"
                android:paddingBottom="6dp"
                android:text="@string/ask_skill2"
                android:textColor="@color/text_color1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_prompt1" />

            <TextView
                android:layout_marginTop="37dp"
                android:id="@+id/tv_prompt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_back_shape"
                android:gravity="center"
                android:paddingStart="35dp"
                android:paddingTop="6dp"
                android:paddingEnd="35dp"
                android:paddingBottom="6dp"
                android:text="@string/ask_skill2"
                android:textColor="@color/text_color1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_prompt2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_bottom"
            android:layout_width="match_parent"
            android:layout_marginBottom="45dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText

                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/et_input"

                android:layout_width="0dp"
                android:layout_marginStart="17dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_back"
                android:hint="请输入你的问题"
                app:layout_constraintEnd_toStartOf="@+id/iv_ask"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginEnd="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- <TextView
                 android:id="@+id/tv_ans"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />-->
            <ImageView
                android:id="@+id/iv_ask"
                android:layout_width="32dp"
                android:layout_height="28dp"

                android:layout_marginEnd="23dp"
                android:src="@mipmap/send"
                android:text="提问"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>